--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,11 @@
 {
   "version": "0.2.0",
   "configurations": [
-    {
-      "name": "(gdb) Launch Union",
+     {
+      "name": "(gdb) Launch UnionsandStructs",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/build/Union_example", // Specify the executable name
+      "program": "${workspaceFolder}/build/UnionsandStructs_example",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
@@ -22,14 +22,77 @@
           "description": "Set Disassembly Flavor to Intel",
           "text": "-gdb-set disassembly-flavor intel",
           "ignoreFailures": true
-        }
+        },
+        {
+          "text": "set output-radix 16",
+          "description": "set the default numeric base to 16",
+          "ignoreFailures": false
+      }
+      ]
+    },
+    {
+      "name": "(gdb) Launch ArraysofPointers",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/build/ArraysofPointers_example",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        },
+        {
+          "description": "Set Disassembly Flavor to Intel",
+          "text": "-gdb-set disassembly-flavor intel",
+          "ignoreFailures": true
+        },
+        {
+          "text": "set output-radix 16",
+          "description": "set the default numeric base to 16",
+          "ignoreFailures": false
+      }
+      ]
+    },
+    {
+      "name": "(gdb) Debug PointerstoNestedUnionandStruct",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/build/PointerstoNestedUnionandStruct_example",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        },
+        {
+          "description": "Set Disassembly Flavor to Intel",
+          "text": "-gdb-set disassembly-flavor intel",
+          "ignoreFailures": true
+        },
+        {
+          "text": "set output-radix 16",
+          "description": "set the default numeric base to 16",
+          "ignoreFailures": false
+      }
       ]
     },
     {
       "name": "(gdb) Launch UnionsandStructs",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/build/UnionsandStructs_example", // Specify the executable name
+      "program": "${workspaceFolder}/build/UnionsandStructs_example",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
@@ -46,10 +109,14 @@
           "description": "Set Disassembly Flavor to Intel",
           "text": "-gdb-set disassembly-flavor intel",
           "ignoreFailures": true
-        }
+        },
+        {
+          "text": "set output-radix 16",
+          "description": "set the default numeric base to 16",
+          "ignoreFailures": false
+      }
       ]
     },
     // Add more configurations for other executables
   ]
 }
-
